volvemos a empezar de nuevo a compilar con sass

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,15 @@
+/* General */
+:root {
+  --white: #FFFFFF;
+  --black: #000000;
+  --very-light-pink: #C7C7C7;
+  --text-input-field: #F7F7F7;
+  --hospital-green: #ACD9B2;
+  --sm: 14px;
+  --md: 16px;
+  --lg: 18px;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -12,25 +24,12 @@ body {
   display: none;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  margin: 0;
-  font-family: "Quicksand", sans-serif;
-}
-
-.inactive {
-  display: none;
-}
-
+/* Navbar (general) */
 nav {
   display: flex;
   justify-content: space-between;
   padding: 0 24px;
-  border-bottom: 1px solid #C7C7C7;
+  border-bottom: 1px solid var(--very-light-pink);
 }
 
 .menu {
@@ -41,26 +40,7 @@ nav {
   width: 100px;
 }
 
-.navbar.left {
-  display: flex;
-}
-.navbar.left ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  align-items: center;
-  height: 60px;
-  margin-left: 12px;
-}
-.navbar.left a {
-  text-decoration: none;
-  color: #C7C7C7;
-  border: 1px solid #FFFFFF;
-  padding: 8px;
-  border-radius: 8px;
-}
-
+.navbar-left ul,
 .navbar-right ul {
   list-style: none;
   padding: 0;
@@ -69,30 +49,47 @@ nav {
   align-items: center;
   height: 60px;
 }
-.navbar-right a {
+
+.navbar-left {
+  display: flex;
+}
+
+.navbar-left ul {
+  margin-left: 12px;
+}
+
+.navbar-left ul li a,
+.navbar-right ul li a {
   text-decoration: none;
-  color: #C7C7C7;
-  border: 1px solid #FFFFFF;
+  color: var(--very-light-pink);
+  border: 1px solid var(--white);
   padding: 8px;
   border-radius: 8px;
 }
 
+.navbar-left ul li a:hover,
+.navbar-right ul li a:hover {
+  border: 1px solid var(--hospital-green);
+  color: var(--hospital-green);
+}
+
 .navbar-email {
-  color: #C7C7C7;
+  color: var(--very-light-pink);
   cursor: pointer;
-  font-size: 14px;
+  font-size: var(--sm);
   margin-right: 12px;
 }
 
 .navbar-shopping-cart {
   position: relative;
 }
+
 .navbar-shopping-cart div {
   width: 16px;
   height: 16px;
-  background-color: #ACD9B2;
+  background-color: var(--hospital-green);
   border-radius: 50%;
-  font-size: 14px;
+  font-size: var(--sm);
   font-weight: bold;
   position: absolute;
   top: -6px;
@@ -102,50 +99,27 @@ nav {
   align-items: center;
 }
 
-.navbar-left ul li a:hover,
-.navbar-right ul li a:hover {
-  border: 1px solid #ACD9B2;
-  color: #ACD9B2;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  margin: 0;
-  font-family: "Quicksand", sans-serif;
-}
-
-.inactive {
-  display: none;
-}
-
+/* Menu en desktop */
 .desktop-menu {
   position: absolute;
   top: 60px;
   right: 60px;
-  background: #FFFFFF;
+  background: var(--white);
   width: 100px;
   height: auto;
-  border: 1px solid #C7C7C7;
+  border: 1px solid var(--very-light-pink);
   border-radius: 6px;
   padding: 20px 20px 0 20px;
 }
+
 .desktop-menu ul {
   list-style: none;
   padding: 0;
   margin: 0;
 }
-.desktop-menu li {
+
+.desktop-menu ul li {
   text-align: end;
-}
-.desktop-menu a {
-  color: #000000;
-  text-decoration: none;
-  margin-bottom: 20px;
-  display: inline-block;
 }
 
 .desktop-menu ul li:nth-child(1),
@@ -155,52 +129,50 @@ body {
 
 .desktop-menu ul li:last-child {
   padding-top: 20px;
-  border-top: 1px solid #C7C7C7;
+  border-top: 1px solid var(--very-light-pink);
 }
 
 .desktop-menu ul li:last-child a {
-  color: #ACD9B2;
-  font-size: 14px;
+  color: var(--hospital-green);
+  font-size: var(--sm);
 }
 
-* {
-  margin: 0;
-  padding: 0;
+.desktop-menu ul li a {
+  color: var(--back);
+  text-decoration: none;
+  margin-bottom: 20px;
+  display: inline-block;
 }
 
-body {
-  margin: 0;
-  font-family: "Quicksand", sans-serif;
-}
-
-.inactive {
-  display: none;
-}
-
+/* Menu en mobile */
 .mobile-menu {
-  background-color: #FFFFFF;
+  background-color: var(--white);
   position: absolute;
   top: 60px;
   left: 0;
   width: 100%;
   padding: 24px;
 }
+
+.mobile-menu a {
+  text-decoration: none;
+  color: var(--black);
+  font-weight: bold;
+  /* margin-bottom: 24px; */
+}
+
 .mobile-menu ul {
   padding: 0;
   margin: 24px 0 0;
   list-style: none;
 }
-.mobile-menu li {
-  margin-bottom: 24px;
-}
-.mobile-menu a {
-  text-decoration: none;
-  color: #000000;
-  font-weight: bold;
-}
 
 .mobile-menu ul:nth-child(1) {
   border-bottom: 1px solid var(--very-light-pink);
+}
+
+.mobile-menu ul li {
+  margin-bottom: 24px;
 }
 
 .email {
@@ -213,66 +185,32 @@ body {
   color: var(--hospital-green) !important;
 }
 
-* {
-  margin: 0;
-  padding: 0;
+/* Aside (product detail y carrito) */
+aside {
+  background-color: var(--white);
+  width: 360px;
+  box-sizing: border-box;
+  position: absolute;
+  right: 0;
 }
 
-body {
-  margin: 0;
-  font-family: "Quicksand", sans-serif;
-}
-
-.inactive {
-  display: none;
+/* ShoppingCart */
+#shoppingCartContainer {
+  padding: 0 24px;
 }
 
 .title-container {
   display: flex;
 }
+
 .title-container img {
   transform: rotate(180deg);
   margin-right: 14px;
 }
-.title-container title {
-  font-size: 18px;
+
+.title {
+  font-size: var(--lg);
   font-weight: bold;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  margin: 0;
-  font-family: "Quicksand", sans-serif;
-}
-
-.inactive {
-  display: none;
-}
-
-.shopping-cart {
-  display: grid;
-  grid-template-columns: auto 1fr auto auto;
-  gap: 16px;
-  margin-bottom: 24px;
-  align-items: center;
-}
-.shopping-cart figure {
-  margin: 0;
-}
-.shopping-cart img {
-  width: 70px;
-  height: 70px;
-  border-radius: 20px;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-#shoppingCartContainer {
-  padding: 0 24px;
 }
 
 .order {
@@ -301,6 +239,26 @@ body {
   font-weight: bold;
 }
 
+.shopping-cart {
+  display: grid;
+  grid-template-columns: auto 1fr auto auto;
+  gap: 16px;
+  margin-bottom: 24px;
+  align-items: center;
+}
+
+.shopping-cart figure {
+  margin: 0;
+}
+
+.shopping-cart figure img {
+  width: 70px;
+  height: 70px;
+  border-radius: 20px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .shopping-cart p:nth-child(2) {
   color: var(--very-light-pink);
 }
@@ -310,31 +268,21 @@ body {
   font-weight: bold;
 }
 
-/* Aside (product detail y carrito) */
-aside {
-  background-color: #FFFFFF;
-  width: 360px;
-  box-sizing: border-box;
-  position: absolute;
-  right: 0;
-}
-
-/* ShoppingCart */
 .primary-button {
-  background-color: #ACD9B2;
+  background-color: var(--hospital-green);
   border-radius: 8px;
   border: none;
-  color: #FFFFFF;
+  color: var(--white);
   width: 100%;
   cursor: pointer;
-  font-size: 16px;
+  font-size: var(--md);
   font-weight: bold;
   height: 50px;
 }
 
 /* ProductDetail */
 .product-detail-close {
-  background: #FFFFFF;
+  background: var(--white);
   width: 14px;
   height: 14px;
   position: absolute;
@@ -363,33 +311,33 @@ aside {
 
 #productDetail .product-info p:nth-child(1) {
   font-weight: bold;
-  font-size: 16px;
+  font-size: var(--md);
   margin-top: 0;
   margin-bottom: 4px;
 }
 
 #productDetail .product-info p:nth-child(2) {
-  color: #C7C7C7;
+  color: var(--very-light-pink);
   font-size: var(--md);
   margin-top: 0;
   margin-bottom: 36px;
 }
 
 #productDetail .product-info p:nth-child(3) {
-  color: #C7C7C7;
-  font-size: 14px;
+  color: var(--very-light-pink);
+  font-size: var(--sm);
   margin-top: 0;
   margin-bottom: 36px;
 }
 
 .primary-button {
-  background-color: #ACD9B2;
+  background-color: var(--hospital-green);
   border-radius: 8px;
   border: none;
-  color: #FFFFFF;
+  color: var(--white);
   width: 100%;
   cursor: pointer;
-  font-size: 14px;
+  font-size: var(--md);
   font-weight: bold;
   height: 50px;
 }
@@ -439,16 +387,16 @@ aside {
 
 .product-card .product-info div p:nth-child(1) {
   font-weight: bold;
-  font-size: 16px;
+  font-size: var(--md);
   margin-top: 0;
   margin-bottom: 4px;
 }
 
 .product-card .product-info div p:nth-child(2) {
-  font-size: 14px;
+  font-size: var(--sm);
   margin-top: 0;
   margin-bottom: 0;
-  color: #C7C7C7;
+  color: var(--very-light-pink);
 }
 
 /* Formulario*/
