--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,15 +1,4 @@
-/* General */
-:root {
-  --white: #FFFFFF;
-  --black: #000000;
-  --very-light-pink: #C7C7C7;
-  --text-input-field: #F7F7F7;
-  --hospital-green: #ACD9B2;
-  --sm: 14px;
-  --md: 16px;
-  --lg: 18px;
-}
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -29,7 +18,7 @@ nav {
   display: flex;
   justify-content: space-between;
   padding: 0 24px;
-  border-bottom: 1px solid var(--very-light-pink);
+  border-bottom: 1px solid #C7C7C7;
 }
 
 .menu {
@@ -61,22 +50,22 @@ nav {
 .navbar-left ul li a,
 .navbar-right ul li a {
   text-decoration: none;
-  color: var(--very-light-pink);
-  border: 1px solid var(--white);
+  color: #C7C7C7;
+  border: 1px solid #FFFFFF;
   padding: 8px;
   border-radius: 8px;
 }
 
 .navbar-left ul li a:hover,
 .navbar-right ul li a:hover {
-  border: 1px solid var(--hospital-green);
-  color: var(--hospital-green);
+  border: 1px solid #ACD9B2;
+  color: #ACD9B2;
 }
 
 .navbar-email {
-  color: var(--very-light-pink);
+  color: #C7C7C7;
   cursor: pointer;
-  font-size: var(--sm);
+  font-size: 14px;
   margin-right: 12px;
 }
 
@@ -87,9 +76,9 @@ nav {
 .navbar-shopping-cart div {
   width: 16px;
   height: 16px;
-  background-color: var(--hospital-green);
+  background-color: #ACD9B2;
   border-radius: 50%;
-  font-size: var(--sm);
+  font-size: 14px;
   font-weight: bold;
   position: absolute;
   top: -6px;
@@ -104,10 +93,10 @@ nav {
   position: absolute;
   top: 60px;
   right: 60px;
-  background: var(--white);
+  background: #FFFFFF;
   width: 100px;
   height: auto;
-  border: 1px solid var(--very-light-pink);
+  border: 1px solid #C7C7C7;
   border-radius: 6px;
   padding: 20px 20px 0 20px;
 }
@@ -129,16 +118,16 @@ nav {
 
 .desktop-menu ul li:last-child {
   padding-top: 20px;
-  border-top: 1px solid var(--very-light-pink);
+  border-top: 1px solid #C7C7C7;
 }
 
 .desktop-menu ul li:last-child a {
-  color: var(--hospital-green);
-  font-size: var(--sm);
+  color: #ACD9B2;
+  font-size: 14px;
 }
 
 .desktop-menu ul li a {
-  color: var(--back);
+  color: #000000;
   text-decoration: none;
   margin-bottom: 20px;
   display: inline-block;
@@ -146,7 +135,7 @@ nav {
 
 /* Menu en mobile */
 .mobile-menu {
-  background-color: var(--white);
+  background-color: #FFFFFF;
   position: absolute;
   top: 60px;
   left: 0;
@@ -156,7 +145,7 @@ nav {
 
 .mobile-menu a {
   text-decoration: none;
-  color: var(--black);
+  color: #000000;
   font-weight: bold;
   /* margin-bottom: 24px; */
 }
@@ -168,7 +157,7 @@ nav {
 }
 
 .mobile-menu ul:nth-child(1) {
-  border-bottom: 1px solid var(--very-light-pink);
+  border-bottom: 1px solid #C7C7C7;
 }
 
 .mobile-menu ul li {
@@ -176,18 +165,18 @@ nav {
 }
 
 .email {
-  font-size: var(--sm);
+  font-size: 14px;
   font-weight: 300 !important;
 }
 
 .sign-out {
-  font-size: var(--sm);
+  font-size: 14px;
   color: var(--hospital-green) !important;
 }
 
 /* Aside (product detail y carrito) */
 aside {
-  background-color: var(--white);
+  background-color: #FFFFFF;
   width: 360px;
   box-sizing: border-box;
   position: absolute;
@@ -209,7 +198,7 @@ aside {
 }
 
 .title {
-  font-size: var(--lg);
+  font-size: 18px;
   font-weight: bold;
 }
 
@@ -218,7 +207,7 @@ aside {
   grid-template-columns: auto 1fr;
   gap: 16px;
   align-items: center;
-  background-color: var(--text-input-field);
+  background-color: #F7F7F7;
   margin-bottom: 24px;
   border-radius: 8px;
   padding: 0 24px;
@@ -230,7 +219,7 @@ aside {
 }
 
 .order p span:nth-child(1) {
-  font-size: var(--md);
+  font-size: 16px;
   font-weight: bold;
 }
 
@@ -260,29 +249,29 @@ aside {
 }
 
 .shopping-cart p:nth-child(2) {
-  color: var(--very-light-pink);
+  color: #C7C7C7;
 }
 
 .shopping-cart p:nth-child(3) {
-  font-size: var(--md);
+  font-size: 16px;
   font-weight: bold;
 }
 
 .primary-button {
-  background-color: var(--hospital-green);
+  background-color: #ACD9B2;
   border-radius: 8px;
   border: none;
-  color: var(--white);
+  color: #FFFFFF;
   width: 100%;
   cursor: pointer;
-  font-size: var(--md);
+  font-size: 16px;
   font-weight: bold;
   height: 50px;
 }
 
 /* ProductDetail */
 .product-detail-close {
-  background: var(--white);
+  background: #FFFFFF;
   width: 14px;
   height: 14px;
   position: absolute;
@@ -311,33 +300,33 @@ aside {
 
 #productDetail .product-info p:nth-child(1) {
   font-weight: bold;
-  font-size: var(--md);
+  font-size: 16px;
   margin-top: 0;
   margin-bottom: 4px;
 }
 
 #productDetail .product-info p:nth-child(2) {
-  color: var(--very-light-pink);
-  font-size: var(--md);
+  color: #C7C7C7;
+  font-size: 16px;
   margin-top: 0;
   margin-bottom: 36px;
 }
 
 #productDetail .product-info p:nth-child(3) {
-  color: var(--very-light-pink);
-  font-size: var(--sm);
+  color: #C7C7C7;
+  font-size: 14px;
   margin-top: 0;
   margin-bottom: 36px;
 }
 
 .primary-button {
-  background-color: var(--hospital-green);
+  background-color: #ACD9B2;
   border-radius: 8px;
   border: none;
-  color: var(--white);
+  color: #FFFFFF;
   width: 100%;
   cursor: pointer;
-  font-size: var(--md);
+  font-size: 16px;
   font-weight: bold;
   height: 50px;
 }
@@ -387,16 +376,16 @@ aside {
 
 .product-card .product-info div p:nth-child(1) {
   font-weight: bold;
-  font-size: var(--md);
+  font-size: 16px;
   margin-top: 0;
   margin-bottom: 4px;
 }
 
 .product-card .product-info div p:nth-child(2) {
-  font-size: var(--sm);
+  font-size: 14px;
   margin-top: 0;
   margin-bottom: 0;
-  color: var(--very-light-pink);
+  color: #C7C7C7;
 }
 
 /* Formulario*/
@@ -404,71 +393,303 @@ aside {
   text-align: center;
 }
 
-/* Footer */
-.pie-pagina {
-  width: 100%;
-  background-color: #749fc5;
+/* seccion nosotros */
+:root {
+  --padding-container: 100px 0;
+  --color-title: #001A49;
 }
 
-.pie-pagina .grupo-1 {
-  width: 100%;
+body {
+  font-family: "Poppins", sans-serif;
+}
+
+.container {
+  width: 90%;
   max-width: 1200px;
-  margin: auto;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 50px;
-  padding: 45px 0px;
+  margin: 0 auto;
+  overflow: hidden;
+  padding: var(--padding-container);
 }
 
-.pie-pagina .grupo-1 .box figure {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
+/* Hero container */
+.hero__container {
+  max-width: 800px;
+  --padding-container: 0;
+  display: grid;
+  grid-auto-rows: -webkit-max-content;
+  grid-auto-rows: max-content;
+  align-content: center;
+  gap: 1em;
+  padding-bottom: 100px;
+  text-align: center;
+}
+
+.hero__title {
+  font-size: 3rem;
+}
+
+.hero__paragraph {
+  margin-bottom: 20px;
+}
+
+.cta {
+  display: inline-block;
+  background-color: #2091F9;
+  justify-self: center;
+  color: #fff;
+  text-decoration: none;
+  padding: 13px 30px;
+  border-radius: 32px;
+}
+
+/* About */
+.about {
+  text-align: center;
+}
+
+.subtitle {
+  color: var(--color-title);
+  font-size: 2rem;
+  margin-bottom: 25px;
+}
+
+.about__paragraph {
+  line-height: 1.7;
+}
+
+.about__main {
+  padding-top: 80px;
+  display: grid;
+  width: 90%;
+  margin: 0 auto;
+  gap: 1em;
+  overflow: hidden;
+  grid-template-columns: repeat(auto-fit, minmax(260px, auto));
+}
+
+.about__icons {
+  display: grid;
+  gap: 1em;
+  justify-items: center;
+  width: 260px;
+  overflow: hidden;
+  margin: 0 auto;
+}
+
+.about__icon {
+  width: 40px;
+}
+
+/* Knowledge */
+.knowledge {
+  background-color: #e5e5f7;
+  background-image: radial-gradient(#444cf7 0.5px, transparent 0.5px), radial-gradient(#444cf7 0.5px, #e5e5f7 0.5px);
+  background-size: 20px 20px;
+  background-position: 0 0, 10px 10px;
+  overflow: hidden;
+}
+
+.knowledge__container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1em;
   align-items: center;
 }
 
-.pie-pagina .grupo-1 .box figure img {
-  width: 250px;
+.knowledge__picture {
+  max-width: 500px;
 }
 
-.pie-pagina .grupo-1 .box h2 {
-  color: #fff;
-  margin-bottom: 25px;
+.knowledge__paragraph {
+  line-height: 1.7;
+  margin-bottom: 15px;
+}
+
+.knowledge__img {
+  width: 100%;
+  display: block;
+}
+
+/* price */
+.price {
+  text-align: center;
+}
+
+.price__table {
+  padding-top: 60px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2.5em;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.price__element {
+  background-color: #e5e5f7;
+  text-align: center;
+  border-radius: 10px;
+  width: 350px;
+  padding: 50px 30px;
+  --color-plan: #696871;
+  --color-price: #1D293F;
+  --bg-cta: #fff;
+  --color-cta: #5454D4;
+  --color-items: #696871;
+}
+
+.price__element--best {
+  width: 350px;
+  padding: 60px 30px;
+  background-color: #e5e5f7;
+  --color-plan: rgb(255 255 255 / 75%);
+  --color-price: #1D293F;
+  --bg-cta: #fff;
+  --color-cta: #5454D4;
+  --color-items: #696871;
+}
+
+.price__name {
+  color: var(--color-plan);
+  margin-bottom: 15px;
+  font-weight: 300;
+}
+
+.price__price {
+  font-size: 2.1rem;
+  color: var(--color-price);
+}
+
+.price__items {
+  margin-top: 35px;
+  display: grid;
+  gap: 1em;
+  font-weight: 300;
+  font-size: 1.2rem;
+  margin-bottom: 50px;
+  color: var(--color-items);
+}
+
+.price__cta {
+  display: block;
+  padding: 20px 0;
+  border-radius: 10px;
+  text-decoration: none;
+  background-color: var(--bg-cta);
+  font-weight: 600;
+  color: var(--color-cta);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0.5);
+}
+
+/* Questions */
+.questions {
+  text-align: center;
+}
+
+.questions__container {
+  display: grid;
+  gap: 2em;
+  padding-top: 50px;
+  padding-bottom: 100px;
+}
+
+.questions__padding {
+  padding: 0;
+  transition: padding 0.3s;
+  border: 1px solid #5454D4;
+  border-radius: 6px;
+}
+
+.questions__padding--add {
+  padding-bottom: 30px;
+}
+
+.questions__answer {
+  padding: 0 30px 0;
+  overflow: hidden;
+}
+
+.questions__title {
+  text-align: left;
+  display: flex;
   font-size: 20px;
+  padding: 30px 0 30px;
+  cursor: pointer;
+  color: var(--color-title);
+  justify-content: space-between;
 }
 
-.pie-pagina .grupo-1 .box p {
-  color: #efefef;
+.questions__arrow {
+  border-radius: 50%;
+  background-color: var(--color-title);
+  width: 25px;
+  height: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: flex-end;
+  margin-left: 10px;
+  transition: transform 0.3s;
+}
+
+.questions__arrow--rotate {
+  transform: rotate(180deg);
+}
+
+.questions__show {
+  text-align: left;
+  height: 0;
+  transition: height 0.3s;
+}
+
+.questions__img {
+  display: block;
+}
+
+.questions__copy {
+  width: 60%;
+  margin: 0 auto;
+  margin-bottom: 30px;
+}
+
+/* Footer */
+.footer {
+  background-color: #1D293F;
+}
+
+.footer__inputs {
+  margin-top: 10px;
+  display: flex;
+  overflow: hidden;
+}
+
+.footer__input {
+  background-color: #fff;
+  height: 50px;
+  display: block;
+  padding-left: 10px;
+  border-radius: 6px;
+  font-size: 1rem;
+  outline: none;
+  border: none;
+  margin-right: 16px;
+}
+
+.footer__copy {
+  --padding-container: 30px 0;
+  text-align: center;
+  color: #fff;
+}
+
+.footer__copyright {
+  font-weight: 300;
+}
+
+.footer__icons {
   margin-bottom: 10px;
 }
 
-.pie-pagina .grupo-1 .red-social a {
-  display: inline-block;
-  text-decoration: none;
-  width: 45px;
-  height: 45px;
-  line-height: 45px;
-  color: #fff;
-  margin-right: 10px;
-  background-color: #0d2033;
-  text-align: center;
-  transition: all 300ms ease;
-}
-
-.pie-pagina .grupo-1 .red-social a:hover {
-  color: aqua;
-}
-
-.pie-pagina .grupo-2 {
-  background-color: #0a1a2a;
-  padding: 15px 10px;
-  text-align: center;
-  color: #fff;
-}
-
-.pie-pagina .grupo-2 small {
-  font-size: 15px;
+.footer__img {
+  width: 30px;
 }
 
 @media (max-width: 640px) {
