--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -343,21 +343,12 @@ aside {
 /* seccion nosotros */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
 
-:root {
-    --padding-container: 100px 0;
-    --color-title: #001A49;
-}
-
-body {
-    font-family: 'Poppins', sans-serif;
-}
-
 .container {
     width: 90%;
     max-width: 1200px;
     margin: 0 auto;
     overflow: hidden;
-    padding: var(--padding-container);
+    padding: $padding;
 }
 
 /* Hero container */
@@ -398,7 +389,7 @@ body {
 }
 
 .subtitle {
-    color: var(--color-title);
+    color: $blue;
     font-size: 2rem;
     margin-bottom: 25px;
 }
@@ -571,13 +562,13 @@ body {
     font-size: 20px;
     padding: 30px 0 30px;
     cursor: pointer;
-    color: var(--color-title);
+    color: $blue;
     justify-content: space-between;
 }
 
 .questions__arrow{
     border-radius: 50%;
-    background-color: var(--color-title);
+    background-color: $blue;
     width: 25px;
     height: 25px;
     display: flex;
@@ -606,6 +597,14 @@ body {
     width: 60%;
     margin: 0 auto;
     margin-bottom: 30px;
+}
+
+/* bts */
+.slide img{
+  height: 90vh;
+}
+#carouselExampleIndicators {
+  z-index: -1;
 }
 
 
