--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -1,17 +1,17 @@
 @import "variables";
-*  {
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap");
+@import url(https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap);
+* {
   margin: 0;
   padding: 0;
 }
 body {
   margin: 0;
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
 }
 .inactive {
   display: none;
 }
-
-
 /* Navbar (general) */
 nav {
   display: flex;
@@ -44,7 +44,7 @@ nav {
 .navbar-right ul li a {
   text-decoration: none;
   color: $very-light-pink;
-    border: 1px solid $white;
+  border: 1px solid $white;
   padding: 8px;
   border-radius: 8px;
 }
@@ -67,7 +67,7 @@ nav {
   height: 16px;
   background-color: $hospital-green;
   border-radius: 50%;
-  font-size:$sm;
+  font-size: $sm;
   font-weight: bold;
   position: absolute;
   top: -6px;
@@ -76,7 +76,6 @@ nav {
   justify-content: center;
   align-items: center;
 }
-
 /* Menu en desktop */
 .desktop-menu {
   position: absolute;
@@ -115,7 +114,6 @@ nav {
   margin-bottom: 20px;
   display: inline-block;
 }
-
 /* Menu en mobile */
 .mobile-menu {
   background-color: $white;
@@ -143,15 +141,13 @@ nav {
   margin-bottom: 24px;
 }
 .email {
-  font-size:$sm;
+  font-size: $sm;
   font-weight: 300 !important;
 }
 .sign-out {
-  font-size:$sm;
+  font-size: $sm;
   color: var(--hospital-green) !important;
 }
-
-
 /* Aside (product detail y carrito) */
 aside {
   background-color: $white;
@@ -160,7 +156,6 @@ aside {
   position: absolute;
   right: 0;
 }
-
 /* ShoppingCart */
 #shoppingCartContainer {
   padding: 0 24px;
@@ -232,7 +227,6 @@ aside {
   font-weight: bold;
   height: 50px;
 }
-
 /* ProductDetail */
 .product-detail-close {
   background: $white;
@@ -282,7 +276,7 @@ aside {
   color: $white;
   width: 100%;
   cursor: pointer;
-  font-size:$md;
+  font-size: $md;
   font-weight: bold;
   height: 50px;
 }
@@ -291,8 +285,6 @@ aside {
   align-items: center;
   justify-content: center;
 }
-
-
 /* Product List */
 .cards-container {
   display: grid;
@@ -335,292 +327,244 @@ aside {
   margin-bottom: 0;
   color: $very-light-pink;
 }
-
 /* Formulario*/
 .contact {
   text-align: center;
+  color: $blue;
+  font-size: 2rem;
+  margin-bottom: 25px;
 }
 /* seccion nosotros */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
-
 .container {
-    width: 90%;
-    max-width: 1200px;
-    margin: 0 auto;
-    overflow: hidden;
-    padding: $padding;
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
+  overflow: hidden;
+  padding: $padding;
 }
-
 /* Hero container */
-
 .hero__container {
-    max-width: 800px;
-    --padding-container: 0;
-    display: grid;
-    grid-auto-rows: max-content;
-    align-content: center;
-    gap: 1em;
-    padding-bottom: 100px;
-    text-align: center;
+  max-width: 800px;
+  --padding-container: 0;
+  display: grid;
+  grid-auto-rows: max-content;
+  align-content: center;
+  gap: 1em;
+  padding-bottom: 100px;
+  text-align: center;
 }
-
 .hero__title {
-    font-size: 3rem;
+  font-size: 3rem;
 }
-
 .hero__paragraph {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
-
 .cta {
-    display: inline-block;
-    background-color: #2091F9;
-    justify-self: center;
-    color: #fff;
-    text-decoration: none;
-    padding: 13px 30px;
-    border-radius: 32px;
+  display: inline-block;
+  background-color: #2091f9;
+  justify-self: center;
+  color: #fff;
+  text-decoration: none;
+  padding: 13px 30px;
+  border-radius: 32px;
 }
-
 /* About */
-
 .about {
-    text-align: center;
+  text-align: center;
 }
-
 .subtitle {
-    color: $blue;
-    font-size: 2rem;
-    margin-bottom: 25px;
+  color: $blue;
+  font-size: 2rem;
+  margin-bottom: 25px;
 }
-
-
 .about__paragraph {
-    line-height: 1.7;
+  line-height: 1.7;
 }
-
 .about__main {
-    padding-top: 80px;
-    display: grid;
-    width: 90%;
-    margin: 0 auto;
-    gap: 1em;
-    overflow: hidden;
-    grid-template-columns: repeat(auto-fit, minmax(260px, auto));
+  padding-top: 80px;
+  display: grid;
+  width: 90%;
+  margin: 0 auto;
+  gap: 1em;
+  overflow: hidden;
+  grid-template-columns: repeat(auto-fit, minmax(260px, auto));
 }
-
-
 .about__icons {
-    display: grid;
-    gap: 1em;
-    justify-items: center;
-    width: 260px;
-    overflow: hidden;
-    margin: 0 auto;
+  display: grid;
+  gap: 1em;
+  justify-items: center;
+  width: 260px;
+  overflow: hidden;
+  margin: 0 auto;
 }
-
 .about__icon {
-    width: 40px;
+  width: 40px;
 }
-
 /* Knowledge */
-
 .knowledge {
-    background-color: #e5e5f7;
-    background-image: radial-gradient(#444cf7 0.5px, transparent 0.5px), radial-gradient(#444cf7 0.5px, #e5e5f7 0.5px);
-    background-size: 20px 20px;
-    background-position: 0 0, 10px 10px;
-    overflow: hidden;
+  background-color: #e5e5f7;
+  background-image: radial-gradient(#444cf7 0.5px, transparent 0.5px),
+    radial-gradient(#444cf7 0.5px, #e5e5f7 0.5px);
+  background-size: 20px 20px;
+  background-position: 0 0, 10px 10px;
+  overflow: hidden;
 }
-
-.knowledge__container{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 1em;
-    align-items: center;
+.knowledge__container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1em;
+  align-items: center;
 }
-
-.knowledge__picture{
-    max-width: 500px;
+.knowledge__picture {
+  max-width: 500px;
 }
-
-.knowledge__paragraph{
-    line-height: 1.7;
-    margin-bottom: 15px;
+.knowledge__paragraph {
+  line-height: 1.7;
+  margin-bottom: 15px;
 }
-
-.knowledge__img{
-    width: 100%;
-    display: block;
+.knowledge__img {
+  width: 100%;
+  display: block;
 }
-
 /* price */
-
-.price{
-    text-align: center;
+.price {
+  text-align: center;
 }
-
-.price__table{
-    padding-top: 60px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 2.5em;
-    justify-content: space-evenly;
-    align-items: center;
+.price__table {
+  padding-top: 60px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2.5em;
+  justify-content: space-evenly;
+  align-items: center;
 }
-
-.price__element{
-    background-color: #e5e5f7;
-    text-align: center;
-    border-radius: 10px;
-    width: 350px;
-    padding: 50px 30px;
-    --color-plan: #696871;
-    --color-price: #1D293F;
-    --bg-cta: #fff;
-    --color-cta:  #5454D4;
-    --color-items: #696871;
+.price__element {
+  background-color: #e5e5f7;
+  text-align: center;
+  border-radius: 10px;
+  width: 350px;
+  padding: 50px 30px;
+  --color-plan: #696871;
+  --color-price: #1d293f;
+  --bg-cta: #fff;
+  --color-cta: #5454d4;
+  --color-items: #696871;
 }
-
-.price__element--best{
-    width: 350px;
-    padding: 60px 30px;
-    background-color: #e5e5f7;
-    --color-plan: rgb(255 255 255 / 75%);
-    --color-price: #1D293F;
-    --bg-cta: #fff;
-    --color-cta:  #5454D4;
-    --color-items:  #696871;
+.price__element--best {
+  width: 350px;
+  padding: 60px 30px;
+  background-color: #e5e5f7;
+  --color-plan: rgb(255 255 255 / 75%);
+  --color-price: #1d293f;
+  --bg-cta: #fff;
+  --color-cta: #5454d4;
+  --color-items: #696871;
 }
-
-
-.price__name{
-    color: var(--color-plan);
-    margin-bottom: 15px;
-    font-weight: 300;
+.price__name {
+  color: var(--color-plan);
+  margin-bottom: 15px;
+  font-weight: 300;
 }
-
-.price__price{
-    font-size: 2.1rem;
-    color: var(--color-price);
+.price__price {
+  font-size: 2.1rem;
+  color: var(--color-price);
 }
-
-.price__items{
-    margin-top: 35px;
-    display: grid;
-    gap: 1em;
-    font-weight: 300;
-    font-size: 1.2rem;
-    margin-bottom: 50px;
-    color: var(--color-items);
+.price__items {
+  margin-top: 35px;
+  display: grid;
+  gap: 1em;
+  font-weight: 300;
+  font-size: 1.2rem;
+  margin-bottom: 50px;
+  color: var(--color-items);
 }
-
-.price__cta{
-    display: block;
-    padding: 20px 0;
-    border-radius: 10px;
-    text-decoration: none;
-    background-color: var(--bg-cta);
-    font-weight: 600;
-    color: var(--color-cta);
-    box-shadow: 0 0 1px rgba(0, 0, 0, .5);
+.price__cta {
+  display: block;
+  padding: 20px 0;
+  border-radius: 10px;
+  text-decoration: none;
+  background-color: var(--bg-cta);
+  font-weight: 600;
+  color: var(--color-cta);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0.5);
 }
-
-
 /* Questions */
-
-.questions{
-    text-align: center;
+.questions {
+  text-align: center;
 }
-
-.questions__container{
-    display: grid;
-    gap: 2em;
-    padding-top: 50px;
-    padding-bottom: 100px;
+.questions__container {
+  display: grid;
+  gap: 2em;
+  padding-top: 50px;
+  padding-bottom: 100px;
 }
-
-.questions__padding{
-    padding: 0;
-    transition: padding .3s;
-    border: 1px solid #5454D4;
-    border-radius: 6px;
+.questions__padding {
+  padding: 0;
+  transition: padding 0.3s;
+  border: 1px solid #5454d4;
+  border-radius: 6px;
 }
-
-.questions__padding--add{
-    padding-bottom: 30px;
+.questions__padding--add {
+  padding-bottom: 30px;
 }
-
-.questions__answer{
-    padding: 0 30px 0;
-    overflow: hidden;
+.questions__answer {
+  padding: 0 30px 0;
+  overflow: hidden;
 }
-
-.questions__title{
-    text-align: left;
-    display: flex;
-    font-size: 20px;
-    padding: 30px 0 30px;
-    cursor: pointer;
-    color: $blue;
-    justify-content: space-between;
+.questions__title {
+  text-align: left;
+  display: flex;
+  font-size: 20px;
+  padding: 30px 0 30px;
+  cursor: pointer;
+  color: $blue;
+  justify-content: space-between;
 }
-
-.questions__arrow{
-    border-radius: 50%;
-    background-color: $blue;
-    width: 25px;
-    height: 25px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-self: flex-end;
-    margin-left: 10px;
-    transition:  transform .3s;
+.questions__arrow {
+  border-radius: 50%;
+  background-color: $blue;
+  width: 25px;
+  height: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: flex-end;
+  margin-left: 10px;
+  transition: transform 0.3s;
 }
-
-.questions__arrow--rotate{
-    transform: rotate(180deg);
+.questions__arrow--rotate {
+  transform: rotate(180deg);
 }
-
-.questions__show{
-    text-align: left;
-    height: 0;
-    transition: height .3s;
+.questions__show {
+  text-align: left;
+  height: 0;
+  transition: height 0.3s;
 }
-
-.questions__img{
-    display: block;
+.questions__img {
+  display: block;
 }
-
-.questions__copy{
-    width: 60%;
-    margin: 0 auto;
-    margin-bottom: 30px;
+.questions__copy {
+  width: 60%;
+  margin: 0 auto;
+  margin-bottom: 30px;
 }
-
 /* bts */
-.slide img{
+.slide img {
   height: 90vh;
 }
 #carouselExampleIndicators {
   z-index: -1;
 }
-
-
 /* Footer */
-
-.footer{
-  background-color: #1D293F;
+.footer {
+  background-color: #1d293f;
 }
-
-.footer__inputs{
+.footer__inputs {
   margin-top: 10px;
   display: flex;
   overflow: hidden;
 }
-
-.footer__input{
+.footer__input {
   background-color: #fff;
   height: 50px;
   display: block;
@@ -631,28 +575,20 @@ aside {
   border: none;
   margin-right: 16px;
 }
-
-
-.footer__copy{
+.footer__copy {
   --padding-container: 30px 0;
   text-align: center;
   color: #fff;
 }
-
-.footer__copyright{
+.footer__copyright {
   font-weight: 300;
 }
-
-.footer__icons{
+.footer__icons {
   margin-bottom: 10px;
 }
-
-.footer__img{
+.footer__img {
   width: 30px;
 }
-
-
-
 @media (max-width: 640px) {
   .menu {
     display: block;
@@ -666,11 +602,9 @@ aside {
   .desktop-menu {
     display: none;
   }
-
   aside {
     width: 100%;
   }
-
   .cards-container {
     grid-template-columns: repeat(auto-fill, 140px);
   }
@@ -682,17 +616,8 @@ aside {
     height: 140px;
   }
 }
-
 @media (min-width: 641px) {
   .mobile-menu {
     display: none;
-  }
-  @media screen and (max-width:800px) {
-    .pie-pagina .grupo-1 {
-      width: 90%;
-      grid-template-columns: repeat(1, 1fr);
-      grid-gap: 30px;
-      padding: 35px 0px;
-    }
   }
 }
