--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -8,3 +8,5 @@ $md: 16px;
 $lg: 18px;
 $padding: 100px 0;
 $blue: #001A49;
+$grayish-blue: hsl(201, 11%, 66%);
+$dark-grayish-blue: hsl(210, 10%, 33%);
