agregamos la etiqueta meta description

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -444,12 +444,15 @@ aside {
 
 .subtitle {
   color: #001A49;
-  font-size: 2rem;
+  font-size: 3rem;
+  font-weight: bold;
   margin-bottom: 25px;
 }
 
 .about__paragraph {
   line-height: 1.7;
+  color: hsl(210deg, 10%, 33%);
+  font-size: 1.5rem;
 }
 
 .about__main {
@@ -498,6 +501,7 @@ aside {
 .knowledge__paragraph {
   line-height: 1.7;
   margin-bottom: 15px;
+  color: hsl(210deg, 10%, 33%);
 }
 
 .knowledge__img {
